src/objects/Marketing_Custom_Services__c.object
<CustomObject>
    <fields>
        <fullName>Content_Details__c</fullName>
        <description>URL for Content or Tracking Number for Packages</description>
        <inlineHelpText>URL for Content or Tracking Number for Packages</inlineHelpText>
        <label>Content Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Specific Landing Page</fullName>
                </value>
                <value>
                    <fullName>Document: Executive Letter</fullName>
                </value>
                <value>
                    <fullName>Document: Industry Infographic</fullName>
                </value>
                <value>
                    <fullName>Document: What it Means to Be a Turbonomic Customer</fullName>
                </value>
                <value>
                    <fullName>Swag Pack: Pipeline</fullName>
                </value>
                <value>
                    <fullName>Swag Pack: Strong Upside/Close</fullName>
                </value>
                <value>
                    <fullName>Swag Pack: Other</fullName>
                </value>
                <value>
                    <fullName>Video: Business Impact Presentation</fullName>
                </value>
                <value>
                    <fullName>Video: Introduction</fullName>
                </value>
                <value>
                    <fullName>Video: Champion Value Video</fullName>
                    <isActive>false</isActive>
                    <label>Video: Champion Value Video</label>
                </value>
                <value>
                    <fullName>Video: Video Mailer</fullName>
                    <isActive>false</isActive>
                    <label>Video: Video Mailer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Experience_Owner__c</fullName>
        <formula>Opportunity__r.Account.Customer_Experience_Owner3__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Experience Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>Date MCS was delivered</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Desired Recipient for Pack type MCS</description>
        <label>Desired Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Custom Services</relationshipLabel>
        <relationshipName>Marketing_Custom_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Stamp__c</fullName>
        <description>Stamped Opportunity Stage at time of MCS creation by workflow</description>
        <label>Opportunity Stage (Stamp)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Marketing Custom Services</relationshipLabel>
        <relationshipName>Marketing_Custom_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recipient_Address__c</fullName>
        <formula>Desired_Recipient__r.MailingStreet
&amp;  BR() &amp;
Desired_Recipient__r.MailingCity
&amp;  BR() &amp;
Desired_Recipient__r.MailingState
&amp;  BR() &amp;
Desired_Recipient__r.MailingPostalCode
&amp;  BR() &amp;
Desired_Recipient__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Phone__c</fullName>
        <formula>Desired_Recipient__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Executive__c</fullName>
        <label>Requested Executive</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Content_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bill Veghte</fullName>
                </value>
                <value>
                    <fullName>Ben Nye</fullName>
                </value>
                <value>
                    <fullName>Charles Crouchman</fullName>
                </value>
                <value>
                    <fullName>Mark Thurmond</fullName>
                </value>
                <value>
                    <fullName>Dave Kranowitz</fullName>
                </value>
                <value>
                    <fullName>Steve Corndell</fullName>
                </value>
                <value>
                    <fullName>Shmuel Kliger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Marketing Custom Services</label>
    <nameField>
        <displayFormat>MCS # {0000}</displayFormat>
        <label>Marketing Custom Services Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Custom Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Require_Recipient_for_Swag_Packs</fullName>
        <active>true</active>
        <description>Requires Recipient for Swag Packs or Exec Letter</description>
        <errorConditionFormula>AND(
ISBLANK(Desired_Recipient__c),
OR(
CONTAINS(TEXT(Content_Type__c),&quot;Swag Pack&quot;),
CONTAINS(TEXT(Content_Type__c),&quot;Executve Letter&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Desired_Recipient__c</errorDisplayField>
        <errorMessage>Please enter in a Recipient for this MCS</errorMessage>
    </validationRules>
</CustomObject>